--- a/style.css
+++ b/style.css
@@ -2,38 +2,61 @@ body {
     margin: 0;
     padding: 0;
 }
+.title {
+    font-size: 36px;
+    margin-top: 0%;
+    margin-bottom: 20px;
+}
+.destination {
+    display: inline-block;
+    margin: 20px;
+    text-align: center;
+    vertical-align: top;
+    width: calc(33.33% - 50px); /* O bloco filho (.destination) que é um conteiner, vai usar 33.33% do conteiner pai(.section) e o -50px é para reservar 50px para margins padding entre outros espaçamentos que eu quero em cada bloco */
+    box-sizing: border-box;/* essa linha indica que o bloco inclui margin e padding também e não só o conteúdo */
+}
+.destination img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    height: 200px;
+}
+.description {
+    margin-top: 10px;  
+}
+.subtitulo{
+    font-size: 20px;
+}
 .section1 {
-    background-image: url('https://img2.migalhas.com.br/_MEDPROC_/https__img.migalhas.com.br__SL__gf_base__SL__empresas__SL__MIGA__SL__imagens__SL__2022__SL__01__SL__04__SL__a326a4e9-8f3b-4ce7-b329-c64672ce93b0.jpg._PROC_CP65.jpg'); /* Substitua pela URL da imagem de céu */
+    background-image: url('https://img2.migalhas.com.br/_MEDPROC_/https__img.migalhas.com.br__SL__gf_base__SL__empresas__SL__MIGA__SL__imagens__SL__2022__SL__01__SL__04__SL__a326a4e9-8f3b-4ce7-b329-c64672ce93b0.jpg._PROC_CP65.jpg'); 
     background-size: cover;
     background-position: center;
     color: #2f2929;
     text-align: center;
     padding: 100px 0;
 }
-a:hover{
-    color:#3d3636;
-}
 #menu li {
-    display: inline;
-    padding: 100px;
-
+    display: inline-block;
+    width: calc(35% - 30px);
+    box-sizing: border-box;   
 }
-#menu li a {
+#menu li a{
     text-decoration: none;
     color: aliceblue;
     font-size: 25px;
     text-align: center;
-
 }
 #menu li a:hover{
     color: #847d7d;
 }
-
+ul {
+    margin: 5px;
+    padding: 0px;
+}
 .section2 {
     background-color: #2f2929;
     padding: 1px;
     text-align: center;
-
 }
 .section3 {
     background-color: green;
@@ -53,52 +76,9 @@ a:hover{
     text-align: center;
     padding: 30px 0;
 }
-.title {
-    font-size: 36px;
-    margin-top: 0%;
-    margin-bottom: 20px;
-}
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-}
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-nav ul li a {
-    text-decoration: none;
-    color: white;
-    font-size: 24px;
-}
 footer {
     text-align: center;
     padding: 10px 0;
     background-color: #3d3636;
     color: white;
-}
-.destination {
-    display: inline-block;
-    margin: 20px;
-    text-align: center;
-    vertical-align: top;
-    width: calc(33.33% - 50px); /* 33.33% para ocupar 1/3 da largura e subtrair a margem */
-    box-sizing: border-box;
-}
-.destination img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    height: 200px;
-
-}
-.description {
-    margin-top: 10px;
-    
-}
-
-.subtitulo{
-    font-size: 20px;
 }
