--- a/style.css
+++ b/style.css
@@ -1,84 +1,188 @@
-body {
-    margin: 0;
-    padding: 0;
+/* === Google Font Import - Poppins === */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-.title {
-    font-size: 36px;
-    margin-top: 0%;
-    margin-bottom: 20px;
+
+body{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #8c52ff;
 }
-.destination {
-    display: inline-block;
-    margin: 20px;
-    text-align: center;
-    vertical-align: top;
-    width: calc(33.33% - 50px); /* O bloco filho (.destination) que é um conteiner, vai usar 33.33% do conteiner pai(.section) e o -50px é para reservar 50px para margins padding entre outros espaçamentos que eu quero em cada bloco */
-    box-sizing: border-box;/* essa linha indica que o bloco inclui margin e padding também e não só o conteúdo */
+
+section{
+  position: relative;  
+  height: 450px;
+  width: 1075px;
+  display: flex;
+  align-items: center;
 }
-.destination img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    height: 200px;
+
+.swiper{
+  width: 950px;
 }
-.description {
-    margin-top: 10px;  
+
+.card{
+  position: relative;
+  background: #fff;
+  border-radius: 20px;
+  height: 400px;
+  margin: 20px 0;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
-.subtitulo{
-    font-size: 20px;
+
+.card::before{
+  content: "";
+  position: absolute;
+  height: 40%;
+  width: 100%;
+  background: white;
+  border-radius: 20px 20px 0 0;
 }
-.section1 {
-    background-image: url('https://img2.migalhas.com.br/_MEDPROC_/https__img.migalhas.com.br__SL__gf_base__SL__empresas__SL__MIGA__SL__imagens__SL__2022__SL__01__SL__04__SL__a326a4e9-8f3b-4ce7-b329-c64672ce93b0.jpg._PROC_CP65.jpg'); 
-    background-size: cover;
-    background-position: center;
-    color: #2f2929;
-    text-align: center;
-    padding: 100px 0;
+
+.card .card-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+  position: relative;
+  z-index: 100;
 }
-#menu li {
-    display: inline-block;
-    width: calc(35% - 30px);
-    box-sizing: border-box;   
+
+section .card .image{
+  height: 140px;
+  width: 140px;
+  border-radius: 20%;
+  padding: 3px;
+  background: #7d2ae8;
+  margin-top: 30px;
 }
-#menu li a{
-    text-decoration: none;
-    color: aliceblue;
-    font-size: 25px;
-    text-align: center;
+
+section .card .image img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 20%;
+  border: 3px solid #fff;
 }
-#menu li a:hover{
-    color: #847d7d;
+
+.card .estilo-viagem{
+  position: absolute;
+  top: 12px;
+  right: 95px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
-ul {
-    margin: 5px;
-    padding: 0px;
+
+.card .estilo-viagem span{
+  color: #7d2ae8;
+  opacity: 0.6;
+  margin-top: 10px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  margin: 10px;
 }
-.section2 {
-    background-color: #2f2929;
-    padding: 1px;
-    text-align: center;
+
+.estilo-viagem .tipo{
+  font-size: 20px;
+  font-weight: 600;
 }
-.section3 {
-    background-color: green;
-    color: white;
-    text-align: center;
-    padding: 30px 0;
+
+
+.card .name-location{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  color: black;
+} 
+
+.name-location .name{
+  font-size: 20px;
+  font-weight: 600;
 }
-.section4 {
-    background-color: orange;
-    color: white;
-    text-align: center;
-    padding: 30px 0;
+
+.name-location .location{
+  font-size:15px;
+  font-weight: 500;
 }
-.section5 {
-    background-color: pink;
-    color: white;
-    text-align: center;
-    padding: 30px 0;
+
+.titulo {
+  color: #fff;
+  font-size: 30px;
+  text-align: center;
+  position: absolute;
+  font-style: italic;
+  background: #7d2ae8;
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 600px;
+  border-radius: 10px;
+  width: 61%;
+ 
 }
-footer {
-    text-align: center;
-    padding: 10px 0;
-    background-color: #3d3636;
-    color: white;
+
+.card .rating{
+  display: flex;
+  align-items: center;
+  margin-top: 18px;
+}
+
+.card .rating i{
+  font-size: 18px;
+  margin: 0 2px;
+  color: #7d2ae8;
+}
+
+.card .button{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.card .button button{
+  background: #7d2ae8;
+  outline: none;
+  border: none;
+  color: #fff;
+  padding: 8px 22px;
+  border-radius: 10px;
+  font-size: 14px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.button button:hover{
+  background: #6616d0;
+}
+
+.swiper-pagination{
+  position: absolute;
+  top: 450px;
+}
+
+.swiper-pagination-bullet{
+  height: 7px;
+  width: 26px;
+  border-radius: 25px;
+  background: white;
+}
+
+.swiper-button-next, .swiper-button-prev{
+  opacity: 0.7;
+  color: white;
+  transition: all 0.3s ease;
+}
+.swiper-button-next:hover, .swiper-button-prev:hover{
+  opacity: 1;
+  color: white;
 }
